crates/ink/tests/ui/storage_item/fail/collections_only_packed_1.stderr
error[E0277]: the trait bound `Vec<NonPacked>: Packed` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ the trait `ink::parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`, which is required by `Vec<NonPacked>: AutoStorableHint<ManualKey<453539032>>`
   |
   = help: the trait `ink::parity_scale_codec::Decode` is implemented for `Vec<T>`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`, which is required by `Vec<NonPacked>: AutoStorableHint<ManualKey<453539032>>`
   |
   = help: the following other types implement trait `Encode`:
             [T; N]
             [T]
   = note: required for `Vec<NonPacked>` to implement `Encode`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`

error[E0277]: the trait bound `Vec<NonPacked>: ink::parity_scale_codec::Decode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^ the trait `ink::parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`, which is required by `Contract: Sized`
   |
   = help: the trait `ink::parity_scale_codec::Decode` is implemented for `Vec<T>`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `ink_storage::ink_storage_traits::StorableHint::Type`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   |     type Type: Storable;
   |     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `StorableHint::Type`

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`, which is required by `Contract: Sized`
   |
   = help: the following other types implement trait `Encode`:
             [T; N]
             [T]
   = note: required for `Vec<NonPacked>` to implement `Encode`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `ink_storage::ink_storage_traits::StorableHint::Type`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   |     type Type: Storable;
   |     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `StorableHint::Type`

error[E0277]: the trait bound `Vec<NonPacked>: ink::parity_scale_codec::Decode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^ the trait `ink::parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`, which is required by `Contract: Sized`
   |
   = help: the trait `ink::parity_scale_codec::Decode` is implemented for `Vec<T>`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `Storable`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   | pub trait Storable: Sized {
   |                     ^^^^^ required by this bound in `Storable`

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`, which is required by `Contract: Sized`
   |
   = help: the following other types implement trait `Encode`:
             [T; N]
             [T]
   = note: required for `Vec<NonPacked>` to implement `Encode`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `Storable`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   | pub trait Storable: Sized {
   |                     ^^^^^ required by this bound in `Storable`

error[E0277]: the trait bound `Vec<NonPacked>: ink::parity_scale_codec::Decode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
   |
9  | #[ink::storage_item]
   | ^^^^^^^^^^^^^^^^^^^^ the trait `ink::parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`, which is required by `Contract: Sized`
   |
   = help: the trait `ink::parity_scale_codec::Decode` is implemented for `Vec<T>`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by an implicit `Sized` bound in `Result`
  --> $RUST/core/src/result.rs
   = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
   |
9  | #[ink::storage_item]
   | ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`, which is required by `Contract: Sized`
   |
   = help: the following other types implement trait `Encode`:
             [T; N]
             [T]
   = note: required for `Vec<NonPacked>` to implement `Encode`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by an implicit `Sized` bound in `Result`
  --> $RUST/core/src/result.rs
   = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<NonPacked>: Packed` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:5
   |
11 |     a: Vec<NonPacked>,
   |     ^^^^^^^^^^^^^^^^^ the trait `ink::parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`, which is required by `Vec<NonPacked>: AutoStorableHint<ManualKey<453539032>>`
   |
   = help: the trait `ink::parity_scale_codec::Decode` is implemented for `Vec<T>`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:5
   |
11 |     a: Vec<NonPacked>,
   |     ^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`, which is required by `Vec<NonPacked>: AutoStorableHint<ManualKey<453539032>>`
   |
   = help: the following other types implement trait `Encode`:
             [T; N]
             [T]
   = note: required for `Vec<NonPacked>` to implement `Encode`
   = note: required for `Vec<NonPacked>` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
   = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`

error[E0277]: the trait bound `Vec<NonPacked>: Packed` is not satisfied
 --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
  |
9 | #[ink::storage_item]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `ink::parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`, which is required by `Vec<NonPacked>: AutoStorableHint<ManualKey<453539032>>`
  |
  = help: the trait `ink::parity_scale_codec::Decode` is implemented for `Vec<T>`
  = note: required for `Vec<NonPacked>` to implement `Packed`
  = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
  = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
  = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
 --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
  |
9 | #[ink::storage_item]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`, which is required by `Vec<NonPacked>: AutoStorableHint<ManualKey<453539032>>`
  |
  = help: the following other types implement trait `Encode`:
            [T; N]
            [T]
  = note: required for `Vec<NonPacked>` to implement `Encode`
  = note: required for `Vec<NonPacked>` to implement `Packed`
  = note: required for `Vec<NonPacked>` to implement `StorableHint<()>`
  = note: required for `Vec<NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`
  = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NonPacked: WrapperTypeDecode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonPacked`, which is required by `Vec<NonPacked>: StorageLayout`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Arc<T>
             Box<T>
             Rc<T>
   = note: required for `NonPacked` to implement `ink::parity_scale_codec::Decode`
   = note: required for `NonPacked` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorageLayout`

error[E0277]: the trait bound `NonPacked: WrapperTypeEncode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonPacked`, which is required by `Vec<NonPacked>: StorageLayout`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'a, T>
             Rc<T>
             String
             Vec<T>
             ink::parity_scale_codec::Ref<'a, T, U>
   = note: required for `NonPacked` to implement `Encode`
   = note: required for `NonPacked` to implement `Packed`
   = note: required for `Vec<NonPacked>` to implement `StorageLayout`
